# gananayantra-rusting

./: .gitignore  .replit  Cargo.toml  README.md  goto_bmi_calculate.rs  main.rs  replit.md
attached_assets/: Pasted--Carry-forward-and-Set-off-of-losses-Set-off-of-losses-_1768835998813.txt  Pasted--Carry-forward-and-Set-off-of-losses-Set-off-of-losses-_1768836382901.txt  Pasted--Eligibility-for-updated-return-and-calculation-of-addi_1768836136883.txt  Pasted--STEP-36-ADD-ENERGY-POWER-CONSUMPTION-CALCULATOR-What-t_1769324820495.txt  Pasted--STEP-43-ADD-GEO-EARTH-DISTANCE-HAVERSINE-What-this-cal_1769325398565.txt  Pasted--Taxability-of-Agent-Commission-Agents-earning-commissi_1768835984362.txt  Pasted--Taxability-of-Agent-Commission-Agents-earning-commissi_1768836305557.txt  Pasted-Absolutely-Below-is-a-Replit-safe-copy-pasteable-step-b_1769511673301.txt  Pasted-Alright-final-step-We-ll-do-PUBLISH-cleanly-safely-and-_1769511370156.txt  Pasted-Awesome-We-re-in-the-final-polish-phase-now-Next-step-i_1769510589581.txt  Pasted-Eligibility-for-updated-return-and-calculation-of-addit_1768835962967.txt  Pasted-Got-it-you-re-absolutely-right-to-be-cautious-here-Repl_1769510745793.txt  Pasted-Great-we-continue-in-Replit-safe-micro-steps-Next-is-AP_1769510940814.txt  Pasted-Perfect-Final-stretch-now-this-is-the-last-strategic-st_1769511278424.txt  Pasted-Perfect-This-is-exactly-the-clarity-we-needed-Your-inve_1769515041903.txt  Pasted-Perfect-We-move-to-the-final-release-critical-phase-don_1769511119544.txt  Pasted-Perfect-We-now-do-the-clean-professional-finalization-s_1769510494530.txt  Pasted-Perfect-We-now-move-to-the-most-important-architectural_1769510410696.txt  Pasted-Perfect-continuing-step-by-step-library-first-Now-we-re_1769422312845.txt  Pasted-Perfect-continuing-step-by-step-library-first-no-CLI-Ne_1769422559571.txt  (+19 more)
(+161 files in other folders)
