[package]
name = "gananayantra-rusting"
version = "1.1.0"
edition = "2021"
description = "A comprehensive, modular multi-purpose calculator suite including Health, Financial, Math, Energy, Geo, Water, and Space tools."
license = "MIT"
repository = "https://github.com/LimaniBhavik/gananayantra-rusting"
readme = "README.md"
keywords = ["calculator", "science", "math", "finance", "energy"]
categories = ["science", "command-line-utilities"]

[lib]
name = "gananayantra"
path = "src/lib.rs"


[dependencies]
chrono = "0.4"
