[package]
name = "gananayantra-rusting"
version = "1.1.2"
edition = "2021"
description = "A multi-industry calculation engine for finance, energy, geo, water, space, and utilities"
license = "MIT"
repository = "https://github.com/LimaniBhavik/gananayantra-rusting"
homepage = "https://github.com/LimaniBhavik/gananayantra-rusting"
readme = "README.md"
keywords = ["calculator", "finance", "science", "engineering", "math"]
categories = ["science", "finance", "mathematics"]

[lib]
name = "gananayantra"
path = "src/lib.rs"


[dependencies]
chrono = "0.4"
